# multimodal-knowledge-agent

./: .env.example  .gitignore  README.md  config.toml  pyproject.toml  requirements.txt
src/: main.py
src/agent/: agent.py  edges.py  graphs.py  nodes.py  prompts.py  schemas.py  state.py
src/agent_by_chain/: agent.py  middleware.py  tools.py
src/encoders/: multimodal_encoder.py  text_encoder.py
src/retrieval/: query.py  rerank.py
src/storage/: build_knowledge_base.py  generate_file_payload.py  manage_vector_storage.py
src/ui/: ui.py
src/utils/: chunk.py  parse.py  read_config.py
